--- a/styles/login.css
+++ b/styles/login.css
@@ -29,13 +29,16 @@ input {
 .correo {
   margin-bottom: 1em;
 }
-.acceder {
+.password_old {
+  margin-bottom: 1em;
+}
+.btn {
   margin: 0 auto;
   margin-top: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6px 14px;
+  padding: 8px 30px;
   border-radius: 5px;
   border: none;
   background: #6c757d;
@@ -48,7 +51,7 @@ input {
   touch-action: manipulation;
   font-size: medium;
 }
-.acceder:hover {
+.btn:hover {
   color: #f5f5f5;
   background: #383839;
 }
@@ -79,7 +82,7 @@ input {
   input {
     display: block;
     margin: 0 auto;
-    border: 1px solid;
+    border: 1px solid #b3b2b2;
     border-radius: 5px;
   }
 }
